--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 body{
     background-image: linear-gradient(to top, #c79081 0%, #dfa579 100%);
+    background-size: cover;
+    background-repeat: no-repeat;
     font-family: sans-serif;
 }
 
@@ -24,6 +26,7 @@ body{
     text-align: center;
     background-image: linear-gradient(to top, rgb(179, 117, 100) 50%, #52331c 100%);
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .footer-details{
@@ -32,4 +35,6 @@ body{
     font-size: medium;
     margin-bottom: 5px;
     background-image: linear-gradient(to top, rgb(179, 117, 100) 50%, #52331c 100%);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
